--- a/404.html
+++ b/404.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full dark:pintree-bg-gray-900 bg-white">
+<html lang="en" class="h-full dark:marksforest-bg-gray-900 bg-white">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pintree - 404</title>
+    <title>MarksForest - 404</title>
     <meta
       name="keywords"
-      content="Pintree, Bookmarks, Link Management, Export Bookmarks, Website Bookmarks"
+      content="MarksForest, Bookmarks, Link Management, Export Bookmarks, Website Bookmarks"
     />
     <meta
       name="description"
-      content="Pintree is a powerful tool that helps you manage and export your browser bookmarks, converting them into an aesthetically pleasing website that is easy to share and access."
+      content="MarksForest is a powerful tool that helps you manage and export your browser bookmarks, converting them into an aesthetically pleasing website that is easy to share and access."
     />
-    <meta name="author" content="Pintree" />
+    <meta name="author" content="MarksForest" />
     <meta name="robots" content="noindex, follow" />
-    <link rel="canonical" href="https://www.pintree.io/404" />
+    <link rel="canonical" href="https://www.marksforest.io/404" />
     <link rel="stylesheet" href="css/tailwind.css" />
 
     <!-- Structured Data -->
@@ -23,27 +23,31 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "404 Page",
-        "description": "This is the 404 page for Pintree, where you can manage and export your bookmarks.",
-        "url": "https://www.pintree.io/404"
+        "description": "This is the 404 page for MarksForest, where you can manage and export your bookmarks.",
+        "url": "https://www.marksforest.io/404"
       }
     </script>
   </head>
 
-  <body class="h-full flex flex-col dark:pintree-bg-gray-900 bg-white">
+  <body class="h-full flex flex-col dark:marksforest-bg-gray-900 bg-white">
     <header
       class="flex items-center justify-between p-4 border-b border-gray-200 dark:border-gray-800"
     >
       <div class="flex items-center">
-        <img class="h-8 w-auto pl-2" src="assets/logo.svg" alt="Pintree Logo" />
+        <img
+          class="h-8 w-auto pl-2"
+          src="assets/logo.svg"
+          alt="MarksForest Logo"
+        />
         <a href="/" class="ml-4 font-extrabold text-2xl dark:text-white"
-          >Pintree</a
+          >MarksForest</a
         >
       </div>
       <button
         id="themeToggleButton"
         type="button"
         aria-label="Switch theme"
-        class="rounded-full bg-white/90 p-2 shadow-lg ring-1 ring-gray-900/5 backdrop-blur transition dark:pintree-bg-gray-900 dark:ring-white/10 dark:hover:ring-white/20"
+        class="rounded-full bg-white/90 p-2 shadow-lg ring-1 ring-gray-900/5 backdrop-blur transition dark:marksforest-bg-gray-900 dark:ring-white/10 dark:hover:ring-white/20"
       >
         <svg
           id="sunIcon"
@@ -79,7 +83,7 @@
     </header>
 
     <main
-      class="flex flex-col justify-center items-center flex-grow bg-primary text-white dark:pintree-bg-gray-900 p-12"
+      class="flex flex-col justify-center items-center flex-grow bg-primary text-white dark:marksforest-bg-gray-900 p-12"
     >
       <div class="text-center text-gray-700">
         <h1
@@ -126,7 +130,7 @@
       </div>
     </main>
 
-    <footer class="bg-white w-full dark:pintree-bg-gray-900">
+    <footer class="bg-white w-full dark:marksforest-bg-gray-900">
       <div
         class="mx-auto px-6 py-6 md:flex items-center md:justify-between lg:px-8"
       >
@@ -144,7 +148,7 @@
           </svg>
         </a> -->
           <a
-            href="https://x.com/pintree_io"
+            href="https://x.com/marksforest_io"
             target="_blank"
             class="text-gray-400 hover:text-gray-500"
           >
@@ -161,7 +165,7 @@
             </svg>
           </a>
           <a
-            href="https://github.com/Pintree-io/pintree"
+            href="https://github.com/MarksForest-io/marksforest"
             target="_blank"
             class="text-gray-400 hover:text-gray-500"
           >
@@ -192,7 +196,7 @@
           >
             © <span id="currentYear">2024</span>&nbsp;Built with
             <a
-              href="https://pintree.io"
+              href="https://marksforest.io"
               class="text-green-600 hover:text-green-500 flex items-center ml-1"
               target="_blank"
             >
@@ -225,7 +229,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              Pintree
+              MarksForest
             </a>
           </p>
         </div>
